Create custom error pages

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -624,6 +624,13 @@ h2{
 	border-bottom: 1px solid blue;
 }
 
+.error-message, .error-message a{
+	font-family: 'Radikal_Bold';
+	font-size: 48px;
+	color: #fff;
+	text-align: center;	
+}
+
 // Faq styles
 
 .faq{
