--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -68,7 +68,7 @@ h2{
 }
 
 .tags{
-	margin: 15px 0 15px;
+	margin: 15px 0 10px;
 }
 
 .total-likes{
@@ -247,11 +247,11 @@ tr:nth-child(even){
 // tag styles
 
 .tags form {
-	width: 100%;
+	//width: 100%;
 	display: -webkit-flex;
 	display: flex;
-  -webkit-justify-content: space-between;
-  justify-content: space-around;
+  -webkit-justify-content: flex-start;
+  justify-content: flex-start;
 	align-items: stretch;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
@@ -260,12 +260,14 @@ tr:nth-child(even){
 }
 
 .tag-list{
-	flex: 1;
+	//flex: 1;
 	display: block;
 	height: 50px;
 	background: #f7f7ff;
 	color: blue;
 	text-align: center;
+	padding: 0 25px 0 25px;
+	margin-top: 5px;
 }
 
 .tag-list:nth-child(even){
@@ -811,7 +813,6 @@ h2{
 	}
 
 	.tag-list{
-		margin: 0 2px 2px 0;
 		padding: 2px;
 	}
 
@@ -851,11 +852,6 @@ h2{
 		padding: 5px 10px 5px 10px;
 	}
 
-	.tag-list{
-		margin: 0 2px 2px 0;
-		padding: 2px;
-	}
-
 	.sort-ideas{
 		text-align: center;
 		height: 100px;
@@ -889,11 +885,6 @@ h2{
 
 	.navbar-nav{
 		padding: 5px 10px 5px 10px;
-	}
-
-	.tag-list{
-		margin: 0 2px 2px 0;
-		padding: 2px;
 	}
 
 	.sort-ideas{
