--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -250,8 +250,8 @@ tr:nth-child(even){
 	//width: 100%;
 	display: -webkit-flex;
 	display: flex;
-  -webkit-justify-content: flex-start;
-  justify-content: flex-start;
+  -webkit-justify-content: center;
+  justify-content: center;
 	align-items: stretch;
 	-webkit-flex-wrap: wrap;
 	flex-wrap: wrap;
