Localize and prettify error pages

--- a/app/views/errors/error_404.html.erb
+++ b/app/views/errors/error_404.html.erb
@@ -1,4 +1,5 @@
-<div class="container">
-    "This is 404"
-  <%= link_to (t :back), ideas_path %>
+<div class="container error-message">
+    Error 404: Page not found
+    <br>
+  <%= link_to (t :home_page), ideas_path %>
 </div>
