--- a/app/views/errors/error_422.html.erb
+++ b/app/views/errors/error_422.html.erb
@@ -1,4 +1,7 @@
-<div class="container">
-    "This is 422"
-  <%= link_to (t :back), ideas_path %>
+<div class="container error-message">
+    Error 422: Unprocessable Entity.
+    <br>
+    Something went wrong, please contact support.
+    <br>
+  <%= link_to (t :home_page), ideas_path %>
 </div>
