--- a/app/views/errors/error_500.html.erb
+++ b/app/views/errors/error_500.html.erb
@@ -1,4 +1,7 @@
-<div class="container">
-    "This is 500"
-  <%= link_to (t :back), ideas_path %>
+<div class="container error-message">
+    Error 500: Internal server error.
+    <br>
+    Something went wrong, please contact support.
+    <br>
+    <%= link_to (t :home_page), ideas_path %>
 </div>
