--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -57,7 +57,7 @@
 <!-- Show banned -->
 <% if not current_user.nil? and current_user.banned %>
   <div class="container center alert alert-danger">
-    Insert banned text here.
+    <%= (t :you_are_banned) %>
   </div>
 <% end %>
 <!-- End banned -->
