--- a/app/views/ideas/show.html.erb
+++ b/app/views/ideas/show.html.erb
@@ -126,7 +126,7 @@
   <% end %>
 
 
-    <% if not session[:user_id].nil? %><% end %>
+    <% if not session[:user_id].nil? %>
 
       <%= form_for("comment", :url => main_app.comments_path, :html => { :class => "form-horizontal" } ) do |f| %>
       <%= f.hidden_field :idea_id, :value => @idea.id %>
