--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -336,10 +336,10 @@ tr:nth-child(even){
 
 .idea-new{
 	background: #ffffff;
-	background: -moz-linear-gradient(-15deg, #ffffff 1%, #ffffff 50%, #6CF39B 51%, #6CF39B 100%);
-	background: -webkit-linear-gradient(-15deg, #ffffff 1%,#ffffff 50%,#6CF39B 51%,#6CF39B 100%);
-	background: linear-gradient(105deg, #ffffff 1%,#ffffff 50%,#6CF39B 51%,#6CF39B 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#6CF39B',GradientType=1 );
+	background: -moz-linear-gradient(-15deg, #ffffff 1%, #ffffff 50%, #46dbf3 51%, #46dbf3 100%);
+	background: -webkit-linear-gradient(-15deg, #ffffff 1%,#ffffff 50%,#46dbf3 51%,#46dbf3 100%);
+	background: linear-gradient(105deg, #ffffff 1%,#ffffff 50%,#46dbf3 51%,#46dbf3 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#46dbf3',GradientType=1 );
 }
 
 .approved-idea{
@@ -376,10 +376,10 @@ tr:nth-child(even){
 
 .rejected-idea{
 	background: #ffffff;
-	background: -moz-linear-gradient(-15deg, #ffffff 1%, #ffffff 50%, #F3716D 51%, #F3716D 100%);
-	background: -webkit-linear-gradient(-15deg, #ffffff 1%,#ffffff 50%,#F3716D 51%,#F3716D 100%);
-	background: linear-gradient(105deg, #ffffff 1%,#ffffff 50%,#F3716D 51%,#F3716D 100%);
-	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#F3716D',GradientType=1 );
+	background: -moz-linear-gradient(-15deg, #ffffff 1%, #ffffff 50%, #ffa8fd 51%, #ffa8fd 100%);
+	background: -webkit-linear-gradient(-15deg, #ffffff 1%,#ffffff 50%,#ffa8fd 51%,#ffa8fd 100%);
+	background: linear-gradient(105deg, #ffffff 1%,#ffffff 50%,#ffa8fd 51%,#ffa8fd 100%);
+	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ffa8fd',GradientType=1 );
 }
 
 .idea-top h4, .idea-top p, .idea-top a{
@@ -644,7 +644,7 @@ h2{
 	font-family: 'Radikal_Bold';
 	font-size: 48px;
 	color: #fff;
-	text-align: center;	
+	text-align: center;
 }
 
 // Faq styles
@@ -980,7 +980,7 @@ h2{
 	color: blue;
 	font-family: 'Radikal_Bold';
 	font-size: 18px;
-    }	
+    }
 }
 
 @media only screen and (max-width: 345px) {
@@ -1020,5 +1020,5 @@ h2{
 	color: blue;
 	font-family: 'Radikal_Bold';
 	font-size: 18px;
-    }	
+    }
 }
