--- a/app/views/layouts/_header.html.erb
+++ b/app/views/layouts/_header.html.erb
@@ -9,7 +9,7 @@
         <%= link_to root_path do %>
       	 <%=image_tag("logo/hyy-seppele.png", alt: "Hyy Logo", class: 'navbar-brand brand-logo')%>
         <% end %>
-        <%= link_to "Hydea", root_path, class: 'navbar-brand brand-text' %>
+        <%= link_to "Ideoi", root_path, class: 'navbar-brand brand-text' %>
     </div>
     <div class="collapse navbar-collapse" id="myNavbar">
 	    <ul class="nav navbar-nav">
@@ -33,7 +33,7 @@
 	      </li>
 	    </ul>
       <ul class='nav navbar-nav navbar-middle'>
-        <%= link_to "Hydea", root_path %>
+        <%= link_to "Ideoi", root_path %>
       </ul>
       <ul class='nav navbar-nav navbar-right'>
         <li>
