--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,14 +2,14 @@
 <html>
 <head>
   <%= yield(:search) %>
-  <title>Hydea</title>
+  <title>Ideoi</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <% if request.path_info.include?('ideas/:id') %>
-    <meta property="og:title" content="<%= @idea.topic %> | Hydea" />
+    <meta property="og:title" content="<%= @idea.topic %> | Ideoi" />
     <meta property="og:description" content="<%= @idea.text%>" />
   <% else %>
     <!-- Selitys siitä mikä hydea on -->
-    <meta property="og:title" content="Hydea" />
+    <meta property="og:title" content="Ideoi" />
     <meta property="og:description" content="Your description" />
   <% end %>
   <meta property="og:image" content="http://hyy.helsinki.fi/sites/default/files/HYY_LOGO.png" />
